feat: filter assets by sector